# codegraph-mcp

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  add_claude.md  mcp-config.json  skill-global.md
.codegraph/: .gitignore  config.toml  failures.json  patterns.json
benches/: graph_benchmarks.rs
migrations/: learning_v1.sql  store_v1.sql
src/: config.rs  lib.rs  main.rs
src/code/: cross_language.rs  indexer.rs  languages.rs  mod.rs  parser.rs
src/code/queries/: go-references.scm  go-symbols.scm  javascript-references.scm  javascript-symbols.scm  python-references.scm  python-symbols.scm  rust-references.scm  rust-symbols.scm  typescript-references.scm  typescript-symbols.scm
src/compress/: analytics.rs  bash.rs  files.rs  git.rs  mod.rs  search.rs  test_output.rs
src/learning/: confidence.rs  conflicts.rs  failures.rs  lineage.rs  mod.rs  niches.rs  patterns.rs  reflection.rs  sync.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs  transport.rs
src/session/: mod.rs  state.rs
src/skill/: categories.rs  conventions.rs  distill.rs  mod.rs  navigation.rs  render.rs
src/store/: db.rs  graph.rs  migrations.rs  mod.rs
tests/: indexing_integration.rs  learning_integration.rs  mcp_integration.rs  session_integration.rs
