[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1: Storage
libsql = "0.6"
dirs = "5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Phase 2: Code Graph
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
walkdir = "2"
glob = "0.3"
petgraph = "0.6"
once_cell = "1"

# Phase 3: Session Memory
uuid = { version = "1", features = ["v4"] }

# Phase 4 & 5: Learning System
chrono = "0.4"
regex = "1"

# Phase 10: Config
toml = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "graph_benchmarks"
harness = false
